wiki-service/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-service
  namespace: wiki-service
  labels:
    name: wiki-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-service
  template:
    metadata:
      labels:
        app: wiki-service
    spec:
      containers:
      - name: wiki-service
        image: ghcr.io/mindtastic/wiki-service:84265ac9ca48cf431997addc04ad0dc3ac2ee622
        ports:
          - containerPort: 5001
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
