wiki-service/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
  namespace: wiki-service
spec:
  ports:
    - protocol: TCP
      name: http
      port: 5001
  selector:
    app: wiki-service
