wiki-service/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registration-ingress
  namespace: wiki-service

spec:
  rules:
    - host: "wiki.api.dev.mindtastic.lol"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki-service
                port:
                  number: 5001
